--- a/index.html
+++ b/index.html
@@ -39,6 +39,22 @@
                     </div>
 
                     <div class="form-group">
+                        <label for="language" class="form-label">Language</label>
+                        <div class="select-wrapper">
+                            <select id="language" name="language" class="form-select" required>
+                                <option value="" disabled selected>Select language</option>
+                                <option value="UK">UK</option>
+                                <option value="US">US</option>
+                            </select>
+                            <svg class="select-icon" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M6 9L12 15L18 9" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </div>
+                    </div>
+
+                    <div class="form-group">
                         <label for="contentType" class="form-label">Content Type</label>
                         <div class="select-wrapper">
                             <select id="contentType" name="contentType" class="form-select" required>
